Fix responsive on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -86,6 +86,27 @@
 
 /* Custom */
 
+@media (max-width: 767px) {
+    .box-1 {
+        padding: 35px 25px;
+    }
+}
+
+@media (max-width: 480px) {
+    .section-title {
+        font-size: 45px;
+    }
+    .box-1 {
+        padding: 35px 10px;
+    }
+}
+
+@media (max-width: 360px) {
+    .section-title {
+        font-size: 40px;
+    }
+}
+
 /* Menu */
 .nav-header {
     background-color: transparent;
@@ -323,6 +344,21 @@
     }
 }
 
+@media (max-width: 480px) {
+    .section-home .main-title {
+        font-size: 75px;
+    }
+
+}
+
+@media (max-width: 360px) {
+    .section-home .main-title {
+        font-size: 60px;
+    }
+
+}
+
+
 /* Responsive - Section Home */
 
 /* Section - Project */
@@ -398,8 +434,8 @@
 }
 
 .section-about .box-img {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     margin: 0 auto;
 }
 
